Fix footer spacing

--- a/python/ecep/portal/static/scss/_footer.scss
+++ b/python/ecep/portal/static/scss/_footer.scss
@@ -1,14 +1,14 @@
 footer {
 
   font-size: .8em;
-  margin-top: -2em;
+  margin-top: -3em;
 
   .footer {
     $height: 30em;
 
-    height: ($height - 2em);
+    height: ($height - 3em);
     overflow: hidden;
-    margin-top: -2em;
+    margin-top: -3em;
     z-index: 10;
 
     @media (max-width: $break-small) {
@@ -27,7 +27,7 @@ footer {
 
     .footer-content {
       position: relative;
-      top: (-(3*$height) + 2em);
+      top: (-(3*$height) + 3em);
       left: 0;
       color: white;
       z-index: 11;
